# Tran

./: .gitignore  .prettierrc.toml  CHANGELOG.md  README.md  README_EN.md  TODO.md  index.html  justfile  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: analyze.yml  debug.yml  dev.yml  release.yml  rust-clippy.yml  test_build.yml  verify.yml
resource/: backup.json  mirror.json
script/: README.md  built-linux.ts  built-macos.ts  built-windows.ts  built.ts  lang.lua  lang.ts  tag.lua  tag.ts  util.lua  version.lua  version.ts
src/: App.css  App.tsx  common.tsx  icon.tsx  index.tsx  styles.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: panel.toml
src-tauri/icons/: icon.icns
src-tauri/src/: api.rs  clip.rs  common.rs  config.rs  lang.rs  main.rs  manager.rs  resp.rs  setup.rs  shortcut.rs  tray.rs  util.rs  window.rs
src-tauri/src/manager/: api.rs  check.rs  mirror.rs  mod.rs  update.rs
src/components/: Control.tsx  TopBar.tsx
src/css/: Control.css  Panel.css  Setting.css  TopBar.css
src/model/: resp.tsx
src/page/: Panel.tsx  Setting.tsx
src/util/: sleep.tsx  timestamp.tsx
src/util/tray/css/: Tray.css
src/util/tray/page/: Tray.tsx
