[package]
name = "tran"
version = "0.1.12"
description = "Tran translate the selected word."
authors = ["Borber"]
license = "MIT"
repository = "https://github.com/Borber/tran"
edition = "2021"


[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [
    "process-exit",
    "system-tray",
    "window-all",
    "shell-open",
] }

tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }

# For base
once_cell = "1"
anyhow = "1"
parking_lot = { version = "0.12", features = ["nightly"] }

tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["gzip", "json"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

# For window
window-shadows = "0.2"
mouse_position = "0.1"
selection = { git = "https://github.com/Borber/selection" }

# For URL
percent-encoding = "2"

# For clipboard
arboard = { version = "3", default-features = false }

# For language detection
lingua = { version = "1.6", default-features = false, features = [
    "chinese",
    "english",
] }

# For random
fastrand = "2"

# For browser
open = "5"

rdev = "0.5"

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"
