[package]
name = "tran"
version = "0.2.12"
description = "Tran translate the selected words"
authors = ["Borber"]
license = "GPLv3"
repository = "https://github.com/Borber/tran"
edition = "2021"


[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = ["tray-icon"] }
tauri-plugin-process = "2.0.0-beta"
tauri-plugin-single-instance = "2.0.0-beta.6"

# For base
once_cell = "1"
anyhow = "1"
parking_lot = { version = "0.12", features = ["nightly"] }

tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["gzip", "json"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

# For window
mouse_position = "0.1"
selection = { git = "https://github.com/Borber/selection" }

# For URL
percent-encoding = "2"

# For clipboard
arboard = { version = "3", default-features = false }

# For language detection
lingua = { version = "1.6", default-features = false, features = [
    "chinese",
    "english",
] }

# For random
fastrand = "2"

# For browser
open = "5"

rdev = { git = "https://github.com/fufesou/rdev.git" }
crossbeam-channel = "0.5"


[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"
