[package]
name = "tran"
version = "0.2.18"
description = "Tran translate the selected words"
authors = ["Borber"]
license = "GPLv3"
repository = "https://github.com/Borber/tran"
edition = "2021"


[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc", features = ["tray-icon"] }
tauri-plugin-single-instance = "2.0.0-rc"

# For base
once_cell = "1"
anyhow = "1"
parking_lot = { version = "0.12", features = ["nightly"] }

tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["gzip", "json"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

# For window
mouse_position = "0.1"
selection = { git = "https://github.com/Borber/selection.git" }

# For URL
percent-encoding = "2"

# For clipboard
arboard = { version = "3", default-features = false }

# For language detection
lingua = { version = "1.6", default-features = false, features = [
    "chinese",
    "english",
] }

# For random
fastrand = "2"

# For browser
open = "5"

rdev = { git = "https://github.com/Narsil/rdev.git" }


[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"
